prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_03.zkc
//error:3:17-18:expected closing bracket
fn main() {
  var items:[u8;2}
}